--- a/YuniClientMobile/res/layout/main.xml
+++ b/YuniClientMobile/res/layout/main.xml
@@ -5,15 +5,21 @@
               android:layout_height="fill_parent">
         
      <Button android:id="@+id/Disconnect_b"
-            android:layout_width="100px"
+            android:layout_width="105px"
             android:layout_height="40px"
             android:layout_marginTop="10px"
+            android:layout_marginLeft="2px"
             android:text="Disconnect"/> 
-     <Button android:id="@+id/Controls_b"
-            android:layout_width="100px"
+     <Button android:id="@+id/eeprom_b"
+            android:layout_width="105px"
             android:layout_height="40px"
-            android:layout_marginLeft="120px"
+            android:layout_marginTop="10px"
             android:layout_toRightOf="@id/Disconnect_b"
+            android:text="EEPROM"/> 
+     <Button android:id="@+id/Controls_b"
+            android:layout_width="105px"
+            android:layout_height="40px"
+            android:layout_toRightOf="@id/eeprom_b"
             android:layout_marginTop="10px"
             android:text="Controls"/> 
      <Button android:id="@+id/Start_b"
