--- a/YuniClientMobile/res/menu/menu.xml
+++ b/YuniClientMobile/res/menu/menu.xml
@@ -1,5 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
+    <item android:id="@+id/New_entry"
+          android:title="New" />
+    <item android:id="@+id/eraseAll"
+          android:title="Erase all" />
     <item android:id="@+id/reload"
           android:title="Reload" />
     <item android:id="@+id/write"
