--- a/YuniClientMobile/res/menu/menu.xml
+++ b/YuniClientMobile/res/menu/menu.xml
@@ -2,8 +2,8 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:id="@+id/New_entry"
           android:title="New" />
-    <item android:id="@+id/eraseAll"
-          android:title="Erase all" />
+    <item android:id="@+id/switchPart"
+          android:title="Switch parts" />
     <item android:id="@+id/reload"
           android:title="Reload" />
     <item android:id="@+id/write"
