[m11] Cleanup in start/stop function, start hex file browse in /sdcard/hex/, implement text send function

--- a/YuniClientMobile/res/layout/main.xml
+++ b/YuniClientMobile/res/layout/main.xml
@@ -23,28 +23,27 @@
             android:layout_marginTop="10px"
             android:text="Controls"/> 
      <Button android:id="@+id/Start_b"
-            android:layout_width="100px"
+            android:layout_width="105px"
             android:layout_height="40px"
             android:layout_below="@id/Disconnect_b"
             android:layout_marginTop="20px"
-            android:clickable="false"
-            android:enabled="false"
-            android:text="Start"/>
-     <Button android:id="@+id/Stop_b"
-            android:layout_width="100px"
+            android:layout_marginLeft="2px"
+            android:text="Stop"/>
+     <Button android:id="@+id/SendSpec_b"
+            android:layout_width="105px"
             android:layout_height="40px"
             android:layout_below="@id/Disconnect_b"
-            android:layout_marginLeft="120px"
             android:layout_toRightOf="@id/Start_b"
             android:layout_marginTop="20px"
-            android:text="Stop"/>
+            android:layout_marginLeft="105px"
+            android:text="Send..."/>
      <EditText android:id="@+id/hex_file" 
               android:layout_width="fill_parent" 
               android:layout_height="wrap_content" 
               android:layout_marginTop="20px"
               android:background="@android:drawable/editbox_background"
               android:text=""
-              android:layout_below="@id/Stop_b" />
+              android:layout_below="@id/SendSpec_b" />
      <Button android:id="@+id/List_b"
             android:layout_height="40px"
             android:layout_width="160px" 
