[m12] Reorganize main UI, "Send.." button should be always available, do not allow to crash because of disabled bluetooth when connecting

--- a/YuniClientMobile/res/layout/main.xml
+++ b/YuniClientMobile/res/layout/main.xml
@@ -10,40 +10,40 @@
             android:layout_marginTop="10px"
             android:layout_marginLeft="2px"
             android:text="Disconnect"/> 
-     <Button android:id="@+id/eeprom_b"
+     <Button android:id="@+id/Start_b"
             android:layout_width="105px"
             android:layout_height="40px"
             android:layout_marginTop="10px"
             android:layout_toRightOf="@id/Disconnect_b"
-            android:text="EEPROM"/> 
-     <Button android:id="@+id/Controls_b"
+            android:text="Stop"/>
+     <Button android:id="@+id/SendSpec_b"
             android:layout_width="105px"
             android:layout_height="40px"
-            android:layout_toRightOf="@id/eeprom_b"
+            android:layout_toRightOf="@id/Start_b"
             android:layout_marginTop="10px"
-            android:text="Controls"/> 
-     <Button android:id="@+id/Start_b"
+            android:text="Send..."/>
+     <Button android:id="@+id/eeprom_b"
             android:layout_width="105px"
             android:layout_height="40px"
             android:layout_below="@id/Disconnect_b"
             android:layout_marginTop="20px"
             android:layout_marginLeft="2px"
-            android:text="Stop"/>
-     <Button android:id="@+id/SendSpec_b"
+            android:text="EEPROM"/> 
+     <Button android:id="@+id/Controls_b"
             android:layout_width="105px"
             android:layout_height="40px"
             android:layout_below="@id/Disconnect_b"
-            android:layout_toRightOf="@id/Start_b"
+            android:layout_toRightOf="@id/eeprom_b"
             android:layout_marginTop="20px"
             android:layout_marginLeft="105px"
-            android:text="Send..."/>
+            android:text="Controls"/> 
      <EditText android:id="@+id/hex_file" 
               android:layout_width="fill_parent" 
               android:layout_height="wrap_content" 
               android:layout_marginTop="20px"
               android:background="@android:drawable/editbox_background"
               android:text=""
-              android:layout_below="@id/SendSpec_b" />
+              android:layout_below="@id/Controls_b" />
      <Button android:id="@+id/List_b"
             android:layout_height="40px"
             android:layout_width="160px" 
