--- a/YuniClientMobile/res/layout/main.xml
+++ b/YuniClientMobile/res/layout/main.xml
@@ -29,13 +29,19 @@
             android:layout_marginTop="20px"
             android:layout_marginLeft="2px"
             android:text="EEPROM"/> 
-     <Button android:id="@+id/Controls_b"
+     <Button android:id="@+id/ball_b"
             android:layout_width="105px"
             android:layout_height="40px"
             android:layout_below="@id/Disconnect_b"
             android:layout_toRightOf="@id/eeprom_b"
             android:layout_marginTop="20px"
-            android:layout_marginLeft="105px"
+            android:text="BallUI"/> 
+     <Button android:id="@+id/Controls_b"
+            android:layout_width="105px"
+            android:layout_height="40px"
+            android:layout_below="@id/Disconnect_b"
+            android:layout_toRightOf="@id/ball_b"
+            android:layout_marginTop="20px"
             android:text="Controls"/> 
      <EditText android:id="@+id/hex_file" 
               android:layout_width="fill_parent" 
