[m29] Get rid of play eeprom part and YuniControl packet protocol as these has nothing to do with client

--- a/YuniClientMobile/res/menu/menu_terminal.xml
+++ b/YuniClientMobile/res/menu/menu_terminal.xml
@@ -4,8 +4,8 @@
           android:title="Send string" />
     <item android:id="@+id/send_byte"
           android:title="Send byte" />
-    <item android:id="@+id/send_uint16"
-          android:title="Send UInt16" />
+    <!-- <item android:id="@+id/send_uint16"
+          android:title="Send UInt16" /> -->
     <item android:id="@+id/clear"
           android:title="Clear" />
     <item android:id="@+id/save_log"
