--- a/YuniClientMobile/res/layout/eeprom_edit.xml
+++ b/YuniClientMobile/res/layout/eeprom_edit.xml
@@ -10,28 +10,28 @@
 			  android:visibility="gone"/>
     <TextView android:id="@+id/key_label"
     		  android:text="Key"
-    		  android:layout_width="80px"
-    		   android:layout_marginTop="15px"
+    		  android:layout_width="80dp"
+    		   android:layout_marginTop="15dp"
     		  android:layout_height="wrap_content" />
 	<EditText android:id="@+id/key_input" 
-              android:layout_width="80px" 
+              android:layout_width="80dp" 
               android:layout_height="wrap_content" 
-              android:layout_marginTop="10px"
+              android:layout_marginTop="10dp"
               android:background="@android:drawable/editbox_background"
               android:layout_toRightOf="@id/key_label"
-              android:layout_marginRight="20px"
+              android:layout_marginRight="20dp"
               android:maxLength="1"
               android:text="" />
     <TextView android:id="@+id/downUp_label"
     		  android:text="Down/Up"
-    		  android:layout_width="60px"
-    		  android:layout_marginTop="15px"
+    		  android:layout_width="60dp"
+    		  android:layout_marginTop="15dp"
     		  android:layout_toRightOf="@id/key_input"
     		  android:layout_height="wrap_content" />
     <EditText android:id="@+id/downUp_input" 
-              android:layout_width="80px" 
+              android:layout_width="80dp" 
               android:layout_height="wrap_content" 
-              android:layout_marginTop="10px"
+              android:layout_marginTop="10dp"
               android:background="@android:drawable/editbox_background"
               android:layout_toRightOf="@id/downUp_label"
               android:maxLength="1"
@@ -39,14 +39,14 @@
 
 	<TextView android:id="@+id/event_label"
     		  android:text="EndEvent"
-    		  android:layout_width="80px"
-    		  android:layout_marginTop="15px"
+    		  android:layout_width="80dp"
+    		  android:layout_marginTop="15dp"
     		  android:layout_below="@id/downUp_input"
     		  android:layout_height="wrap_content" />
     <EditText android:id="@+id/event_input" 
-              android:layout_width="120px" 
+              android:layout_width="120dp" 
               android:layout_height="wrap_content" 
-              android:layout_marginTop="10px"
+              android:layout_marginTop="10dp"
               android:background="@android:drawable/editbox_background"
               android:layout_toRightOf="@id/event_label"
               android:layout_below="@id/downUp_input"
@@ -55,24 +55,24 @@
     
     <TextView android:id="@+id/byte_label"
     		  android:text="Bytes"
-    		  android:layout_width="80px"
-    		  android:layout_marginTop="15px"
+    		  android:layout_width="80dp"
+    		  android:layout_marginTop="15dp"
     		  android:layout_below="@id/event_input"
     		  android:layout_height="wrap_content" />
 	<EditText android:id="@+id/byte1_input" 
-              android:layout_width="80px" 
+              android:layout_width="80dp" 
               android:layout_height="wrap_content" 
-              android:layout_marginTop="10px"
+              android:layout_marginTop="10dp"
               android:background="@android:drawable/editbox_background"
               android:layout_toRightOf="@id/byte_label"
-              android:layout_marginRight="20px"
+              android:layout_marginRight="20dp"
               android:layout_below="@id/event_input"
               android:maxLength="3"
               android:text="0" />
     <EditText android:id="@+id/byte2_input" 
-              android:layout_width="80px" 
+              android:layout_width="80dp" 
               android:layout_height="wrap_content" 
-              android:layout_marginTop="10px"
+              android:layout_marginTop="10dp"
               android:background="@android:drawable/editbox_background"
               android:layout_toRightOf="@id/byte1_input"
               android:layout_below="@id/event_input"
@@ -81,14 +81,14 @@
     
     <TextView android:id="@+id/big_label"
     		  android:text="BigNum"
-    		  android:layout_width="80px"
-    		  android:layout_marginTop="15px"
+    		  android:layout_width="80dp"
+    		  android:layout_marginTop="15dp"
     		  android:layout_below="@id/byte2_input"
     		  android:layout_height="wrap_content" />
     <EditText android:id="@+id/big_input" 
-              android:layout_width="120px" 
+              android:layout_width="120dp" 
               android:layout_height="wrap_content" 
-              android:layout_marginTop="10px"
+              android:layout_marginTop="10dp"
               android:background="@android:drawable/editbox_background"
               android:layout_toRightOf="@id/big_label"
               android:layout_below="@id/byte2_input"
@@ -104,7 +104,7 @@ DISTANCE           = 6,
 DISTANCE_LEFT      = 7,                 
 DISTANCE_RIGHT     = 8"
     		  android:layout_width="fill_parent"
-    		  android:layout_marginTop="15px"
+    		  android:layout_marginTop="15dp"
     		  android:layout_below="@id/big_input"
     		  android:layout_height="wrap_content"
     		  android:typeface="monospace" />      
