--- a/YuniClientMobile/res/layout/controls.xml
+++ b/YuniClientMobile/res/layout/controls.xml
@@ -10,8 +10,8 @@
       android:fadingEdge="none"
       android:fillViewport="true">         
     <TextView android:id="@+id/output"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
         android:text=""
         android:padding="3dp"
         android:textColor="#fff"
