--- a/YuniClientMobile/res/layout/controls_wide.xml
+++ b/YuniClientMobile/res/layout/controls_wide.xml
@@ -13,8 +13,8 @@
           android:fadingEdge="none"
           android:fillViewport="true" android:layout_weight="1">         
         <TextView android:id="@+id/output"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
             android:text=""
             android:padding="3px"
             android:textColor="#fff"
