--- a/YuniClientMobile/res/menu/menu_controls.xml
+++ b/YuniClientMobile/res/menu/menu_controls.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
+    <item android:id="@+id/protocol"
+          android:title="Protocol" /> 
+    <item android:id="@+id/terminal_parse"
+          android:title="Parser" /> 
     <item android:id="@+id/settings"
           android:title="Settings" />  
-    <item android:id="@+id/exit"
-          android:title="Exit" />      
 </menu>
