--- a/YuniClientMobile/res/menu/menu_terminal.xml
+++ b/YuniClientMobile/res/menu/menu_terminal.xml
@@ -4,8 +4,8 @@
           android:title="Send string" />
     <item android:id="@+id/send_byte"
           android:title="Send byte" />
-     <item android:id="@+id/terminal_parse"
-          android:title="Parse" /> 
+    <item android:id="@+id/terminal_parse"
+          android:title="Parser" /> 
     <item android:id="@+id/clear"
           android:title="Clear" />
     <item android:id="@+id/save_log"
