[m59] Rename Ball to Joystick, move joystick float calculations back to java code - is not faster in jni

--- a/YuniClientMobile/res/layout/main.xml
+++ b/YuniClientMobile/res/layout/main.xml
@@ -26,16 +26,16 @@
         android:id="@+id/linear2" 
         android:layout_below="@id/linear1"
         android:layout_width="fill_parent">
-         <Button android:id="@+id/ball_b"
+         <Button android:id="@+id/joystick_b"
                 android:layout_width="105dp"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/Disconnect_b"
-                android:text="BallUI" android:layout_weight="1"/> 
+                android:text="Joystick" android:layout_weight="1"/> 
          <Button android:id="@+id/accelerometer_b"
                 android:layout_width="105dp"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/Disconnect_b"
-                android:layout_toRightOf="@id/ball_b"
+                android:layout_toRightOf="@id/joystick_b"
                 android:text="Tilt" android:layout_weight="1"/> 
          <Button android:id="@+id/Controls_b"
                 android:layout_width="105dp"
