[m69] Implement char \f to wipe terminal screen, use monospace font in terminal

--- a/YuniClientMobile/res/layout/controls.xml
+++ b/YuniClientMobile/res/layout/controls.xml
@@ -17,6 +17,7 @@
         android:padding="3dp"
         android:textColor="#fff"
         android:maxLines="50000"
+        android:typeface="monospace"
     /> 
     </ScrollView>   
     
