--- a/YuniClientMobile/res/layout-land/controls.xml
+++ b/YuniClientMobile/res/layout-land/controls.xml
@@ -21,6 +21,7 @@
             android:padding="3px"
             android:textColor="#fff"
             android:maxLines="50000"
+            android:typeface="monospace"
         /> 
         </ScrollView>   
         
