--- a/YuniClientMobile/res/layout/eeprom_entry.xml
+++ b/YuniClientMobile/res/layout/eeprom_entry.xml
@@ -4,4 +4,5 @@
     android:layout_height="wrap_content"
     android:textSize="18sp"
     android:padding="5dp"
+    android:typeface="monospace"
 />
