--- a/YuniClientMobile/res/layout/device_list.xml
+++ b/YuniClientMobile/res/layout/device_list.xml
@@ -1,9 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <ViewFlipper xmlns:android="http://schemas.android.com/apk/res/android"
 android:id="@+id/flipper_devices"
 android:layout_width="fill_parent"
 android:layout_height="fill_parent"
 >
+<android.gesture.GestureOverlayView
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/gestures_view"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:eventsInterceptionEnabled="true"
+    android:uncertainGestureColor="#00000000"
+    android:fadeDuration="0"
+    android:fadeOffset="0"
+    android:orientation="vertical">
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="fill_parent"
@@ -29,4 +40,5 @@ android:layout_height="fill_parent"
         android:layout_weight="1"
     />    
 </LinearLayout>
+</android.gesture.GestureOverlayView>
 </ViewFlipper> 
