--- a/res/layout/terminal.xml
+++ b/res/layout/terminal.xml
@@ -3,7 +3,7 @@
               android:orientation="vertical"
               android:layout_width="fill_parent" 
               android:layout_height="fill_parent">
-    <ScrollView    
+    <ScrollView
       android:id="@+id/ScrollViewTerminal"   
       android:layout_height="fill_parent"    
       android:layout_width="fill_parent"
@@ -14,7 +14,7 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:text=""
-            android:padding="3px"
+            android:padding="3dp"
             android:textColor="#fff"
             android:maxLines="50000"
             android:typeface="monospace"
